Fixed some whitespace around .shop widget

--- a/css/app.css
+++ b/css/app.css
@@ -1696,8 +1696,16 @@ footer {
       font-size: 1.125rem;
       color: #7f7f7f; }
 
+/*
 .testimonial-widget {
-  margin-bottom: 6.25rem; }
+  margin-bottom: rem(100);
+}
+*/
+.shop {
+  padding-bottom: 6.25rem; }
+
+.shop-slider {
+  margin-top: 1.5625rem; }
 
 .testimonial-box {
   border: 1px solid #dddddd;
@@ -1725,9 +1733,9 @@ footer {
     color: #666666;
     line-height: 1.35; }
 
-.testimonial-quote {
+.subpage .testimonial-quote {
   padding: 2.4em; }
-  .testimonial-quote p {
+  .subpage .testimonial-quote p {
     position: relative;
     font-style: italic;
     font-weight: 100;
@@ -1735,7 +1743,7 @@ footer {
     font-size: 1.125rem;
     line-height: 1.4375rem;
     margin: 0 1.5em 0.75em 3em; }
-    .testimonial-quote p::before {
+    .subpage .testimonial-quote p::before {
       content: '';
       position: absolute;
       width: 24px;
@@ -1745,7 +1753,7 @@ footer {
       background-image: url(/img/icon_quote.png);
       background-repeat: no-repeat;
       background-position: center center; }
-  .testimonial-quote .testimonial-name {
+  .subpage .testimonial-quote .testimonial-name {
     margin-left: 3em;
     font-style: normal;
     font-size: 1rem;
